Revert "Merge pull request #163 from Matys134/refactoring"
This reverts commit d6adfc8ee993dc99e5193cc053d6ea21fc78a272, reversing
changes made to 8f97b4b9ab84f559bec6655c66861469fc550e15.