@@ -1,24 +1,22 @@
 package com.school.torconfigtool;
 
+import com.school.torconfigtool.file.service.FileOperationsService;
+import com.school.torconfigtool.file.service.FileService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Controller
 @RequestMapping("/onion-service")
@@ -29,6 +27,7 @@ public class OnionServiceController {
     private static final String TORRC_DIRECTORY_PATH = "torrc/";
     private final TorConfigurationService torConfigurationService;
     private final List<String> onionServicePorts;
+    private final FileOperationsService fileOperationsService;
 
     TorConfiguration torConfiguration = new TorConfiguration();
 
@@ -36,14 +35,17 @@ public class OnionServiceController {
     private final RelayOperationsController relayOperationController;
 
     @Autowired
-    public OnionServiceController(TorConfigurationService torConfigurationService, RelayOperationsController relayOperationController) {
+    private FileService fileService;
+    @Autowired
+    public OnionServiceController(TorConfigurationService torConfigurationService, RelayOperationsController relayOperationController, FileOperationsService fileOperationsService) {
         this.torConfigurationService = torConfigurationService;
         this.relayOperationController = relayOperationController; // Initialize the field
         this.onionServicePorts = getAllOnionServicePorts();
+        this.fileOperationsService = fileOperationsService;
 
         // Set the hiddenServicePort here if it's not being set elsewhere
         if (!onionServicePorts.isEmpty()) {
-            torConfiguration.setHiddenServicePort(onionServicePorts.getFirst());
+            torConfiguration.setHiddenServicePort(onionServicePorts.get(0));
         }
 
         // Check if hiddenServiceDirs directory exists, if not, create it
@@ -107,7 +109,7 @@ public class OnionServiceController {
                 hostnames.put(hiddenServicePortString, hostname);
             } else {
                 logger.warn("Hidden service port is null");
-                hostnames.put(null, "Hidden service port is null");
+                hostnames.put(hiddenServicePortString, "Hidden service port is null");
             }
         }
         return hostnames;
@@ -195,6 +197,16 @@ public class OnionServiceController {
     }
 
 
+    private void restartNginx() {
+        try {
+            ProcessBuilder processBuilder = new ProcessBuilder("sudo", "systemctl", "restart", "nginx");
+            Process process = processBuilder.start();
+            process.waitFor();
+        } catch (IOException | InterruptedException e) {
+            logger.error("Error restarting Nginx", e);
+        }
+    }
+
     @PostMapping("/start")
     public String startOnionService(Model model) {
         boolean startSuccess = startTorOnionService();
@@ -275,11 +287,57 @@ public class OnionServiceController {
         }
     }
 
+    @GetMapping("/upload/{port}")
+    public String showUploadForm(@PathVariable("port") int port, Model model) {
+        List<File> fileNames = getUploadedFiles(port);
+        model.addAttribute("uploadedFiles", fileNames);
+        return "file_upload_form";
+    }
+
+    @PostMapping("/remove-files/{port}")
+    public String removeFiles(@RequestParam("selectedFiles") String[] fileNames, @PathVariable("port") int port, Model model) {
+        String fileDir = "onion/www/service-" + port + "/";
+        return fileOperationsService.removeFiles(fileNames, fileDir, model);
+    }
+
+    @PostMapping("/upload/{port}")
+    public String uploadFiles(@RequestParam("files") MultipartFile[] files, @PathVariable("port") int port, Model model) {
+        try {
+            String fileDir = "onion/www/service-" + port + "/";
+            fileService.uploadFiles(files, fileDir);
+            List<File> fileNames = fileService.getUploadedFiles(fileDir);
+            model.addAttribute("uploadedFiles", fileNames);
+            model.addAttribute("message", "Files uploaded successfully!");
+            return "file_upload_form";
+        } catch (Exception e) {
+            model.addAttribute("message", "Fail! -> uploaded filename: " + Arrays.toString(files));
+            return "file_upload_form";
+        }
+    }
+
+    private List<File> getUploadedFiles(int port) {
+        String uploadDir = "onion/www/service-" + port + "/";
+        return fileService.getUploadedFiles(uploadDir);
+    }
+
+    @PostMapping("/refresh-nginx")
+    public ResponseEntity<Void> refreshNginx() {
+        try {
+            ProcessBuilder processBuilder = new ProcessBuilder("sudo", "systemctl", "reload", "nginx");
+            Process process = processBuilder.start();
+            process.waitFor();
+            return ResponseEntity.ok().build();
+        } catch (IOException | InterruptedException e) {
+            logger.error("Error refreshing Nginx", e);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
     @GetMapping("/onion-configured")
     public ResponseEntity<Map<String, Boolean>> checkOnionConfigured() {
         Map<String, Boolean> response = new HashMap<>();
         // Logic to check if an onion service is configured
-        boolean isOnionConfigured = !onionServicePorts.isEmpty();
+        boolean isOnionConfigured = onionServicePorts.size() > 0;
         response.put("onionConfigured", isOnionConfigured);
         return ResponseEntity.ok(response);
     }
